--- a/templates/gsb/Saisie.html.twig
+++ b/templates/gsb/Saisie.html.twig
@@ -53,15 +53,13 @@
                 <br>
                 <div class="englobeInput">
 
-{# {{ form_start(form) }}
-{{ form_row(form.periodeEngagement)}}
-{{ form_row(form.repasMidi)}}
-{{ form_row(form.nuits)}}
-{{ form_row(form.etape)}}
-{{ form_row(form.km)}}
+{{ form_start(form) }}
+{{ form_row(form.prix)}}
+{{ form_row(form.nom)}}
+
 
 <button type="submit"> Valider </button>
-{{ form_end(form) }} #}
+{{ form_end(form) }}
 
                 </div>
 
