--- a/templates/gsb/Saisie.html.twig
+++ b/templates/gsb/Saisie.html.twig
@@ -33,7 +33,8 @@
         </div>
 
         <div class="title">
-            <h1>Saisie fiche de frais</h1>
+        <br>
+            <h1 class="title-head">Saisie fiche de frais</h1>
 
 <br>
 
