--- a/templates/gsb/validation.html.twig
+++ b/templates/gsb/validation.html.twig
@@ -34,7 +34,8 @@
         </div>
 
         <div class="title">
-            <h1>Validation des frais par visiteur</h1>
+        <br>
+            <h1 class="title-head">Validation des frais par visiteur</h1>
 
 
 
