--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,10 @@ header {
     padding: 10px;
 }
 
+.title-head {
+    border-bottom: 0.05em solid rgba(49, 49, 49, 0.6);
+}
+
 .place1 {
     margin-left: 25%;
 }
@@ -99,7 +103,7 @@ section {
 }
 
 .navigation {
-    width: 20%;
+    width: 15%;
     height: 600px;
     border-right: 0.1em solid rgba(49, 49, 49, 0.6);
 }
@@ -112,29 +116,32 @@ section {
     margin-left: 15px;
     width: 100%;
     height: 60px;
-    border-bottom: 0.1em solid rgba(49, 49, 49, 0.6);
+    /*border-bottom: 0.1em solid rgba(49, 49, 49, 0.6);*/
 }
 
 .Periode h1 {
-    padding: 5px;
+    padding: 2px;
     background-color: rgb(163, 163, 163);
     color: white;
 }
 
 .champsElementForfaitisé h1 {
-    padding: 5px;
+    padding: 2px;
     background-color: rgb(4, 4, 148);
     color: white;
 }
 
 .englobeInput {
     display: flex;
-
+    justify-content: space-between;
+    width: 400px;
     align-items: center;
+    background-color: rgb(255, 255, 255);
 }
 
 .inputSaisie {
-    height: 20px;
+    width: 200px;
+    height: 35px;
     align-items: center;
     margin-left: 10px;
 }
@@ -154,4 +161,20 @@ p {
 
 .backconnexion {
     background: url(/public/img/background.jpg);
+}
+
+.tab-color {
+    background-color: rgb(30, 145, 252);
+    color: white;
+}
+
+table {
+    border: 5px solid black;
+    border-collapse: collapse;
+}
+
+.Fiches-screen {
+    margin-left: 10%;
+    align-items: center;
+    width: 75%;
 }
