--- a/templates/gsb/accueil.html.twig
+++ b/templates/gsb/accueil.html.twig
@@ -44,7 +44,8 @@
         </div>
 
         <div class="title">
-            <h1>Accueil</h1>
+        <br>
+            <h1 class="title-head">Accueil</h1>
 
 
 
