--- a/templates/gsb/MesFiches.html.twig
+++ b/templates/gsb/MesFiches.html.twig
@@ -66,6 +66,7 @@
 
 <div class="Fiches-screen">
                 {% for fiche in fiches %}
+                {% if fiche.users_id == app.user.id %}
                 <table class="table table-dark">
 
 <table class="table table-striped ">
@@ -74,6 +75,7 @@
       <th scope="col">#</th>
       <th scope="col">Prix</th>
       <th scope="col">libellé</th>
+      <th scope="col">justificatif {{fiche.id}}</th>
     </tr>
   </thead>
   <tbody>
@@ -85,6 +87,7 @@
   </tbody>
 </table>
 <div>
+{% endif %}
 {% endfor %}
 
 
