--- a/templates/gsb/Saisie.html.twig
+++ b/templates/gsb/Saisie.html.twig
@@ -57,7 +57,11 @@
 {{ form_start(form) }}
 {{ form_row(form.prix)}}
 {{ form_row(form.nom)}}
-
+{{ form_row(form.repas_midi)}}
+{{ form_row(form.periode)}}
+{{ form_row(form.nuits)}}
+{{ form_row(form.etape)}}
+{{ form_row(form.km)}}
 
 <button type="submit"> Valider </button>
 {{ form_end(form) }}
