--- a/templates/gsb/MesFiches.html.twig
+++ b/templates/gsb/MesFiches.html.twig
@@ -69,20 +69,30 @@
                 {% if fiche.users_id == app.user.id %}
                 <table class="table table-dark">
 
-<table class="table table-striped ">
-  <thead class="tab-color">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Prix</th>
-      <th scope="col">libellé</th>
-      <th scope="col">justificatif {{fiche.id}}</th>
-    </tr>
+<table class="table table-striped bordure">
+  <thead>
+
+      <h3 class="tab-color">Frais Au Forfait</h3>
+
   </thead>
   <tbody>
     <tr>
-      <th scope="row">1</th>
-      <td> {{ fiche.prix }} €</td>
-      <td>{{ fiche.nom }}</td>
+      <th scope="col">Repas midi </th>
+      <th scope="col">Période</th>
+      <th scope="col">Nuitée</th>
+      <th scope="col">Etape</th>
+      <th scope="col">Km</th>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <td> {{ fiche.repas_midi}}</td>
+      <td>{{ fiche.periode }}</td>
+      <td> {{ fiche.nuits }}</td>
+      <td>{{ fiche.etape }}</td>
+      <td>{{ fiche.km }} km</td>
+
+
     </tr>
   </tbody>
 </table>
