--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,7 +127,8 @@ section {
 
 .champsElementForfaitisé h1 {
     padding: 2px;
-    background-color: rgb(4, 4, 148);
+    /*background-color: rgb(4, 4, 148);*/
+    background-color: rgb(163, 163, 163);
     color: white;
 }
 
@@ -164,7 +165,7 @@ p {
 }
 
 .tab-color {
-    background-color: rgb(30, 145, 252);
+    background-color: rgb(4, 4, 148);
     color: white;
     display: flex;
     align-items: center;
