--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,7 +97,6 @@ section {
 
 
 .profil {
-
     display: flex;
     align-items: center;
 }
@@ -106,6 +105,7 @@ section {
     width: 15%;
     height: 600px;
     border-right: 0.1em solid rgba(49, 49, 49, 0.6);
+    margin: 20px;
 }
 
 .navigation li {
