--- a/templates/gsb/accueil.html.twig
+++ b/templates/gsb/accueil.html.twig
@@ -17,7 +17,7 @@
         <div class="navigation interact">
             <div class="profil">
                 <i class="far fa-user-circle fa-2x"></i>
-                <li>{{app.user.nom}} {{app.user.prenom}}</li>
+                <li>Bonjour {{app.user.prenom}}</li>
                 <br>
             </div>
 
