--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,6 +172,15 @@ p {
     justify-content: center;
 }
 
+.tab-color2 {
+    background-color: rgb(255, 153, 0);
+    color: white;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
 table {
     border: 5px solid rgb(0, 0, 0);
     border-collapse: collapse;
