--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,9 +3,24 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
+<header>
+        <a class="nav-title-white" href="{{path('gsb')}}">
+            <li>GSB - Galaxy Swiss Bourdin</li>
+        </a>
+        <a class="nav-title-white" href="{{path('app_logout')}}">
+            <li><i class="fas fa-sign-out-alt"></i> Déconnexion</li>
+        </a>
+    </header>
+    <section>
+
+    <br>
+        <br>
+            <br>
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
+    {{ form_row(registrationForm.nom) }}
+    {{ form_row(registrationForm.prenom) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
