--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,11 +119,7 @@ section {
     /*border-bottom: 0.1em solid rgba(49, 49, 49, 0.6);*/
 }
 
-.Periode h1 {
-    padding: 2px;
-    background-color: rgb(163, 163, 163);
-    color: white;
-}
+
 
 .champsElementForfaitisé h1 {
     padding: 2px;
@@ -174,7 +170,8 @@ p {
 }
 
 .tab-color2 {
-    background-color: rgb(255, 153, 0);
+    /* background-color: rgb(255, 153, 0); */
+    background-color: rgb(4, 4, 148);
     padding: 10px;
     color: white;
     display: flex;
@@ -184,8 +181,7 @@ p {
 }
 
 table {
-    border: 5px solid rgb(0, 0, 0);
-    border-collapse: collapse;
+    background-color: rgb(247, 247, 247);
 }
 
 .filter {
@@ -203,7 +199,7 @@ table {
 }
 
 .Fiches-screen {
-    width: 1500px;
+    width: 80%;
 }
 
 .periode {
@@ -211,4 +207,15 @@ table {
     width: 50%;
     height: 150px;
     border-bottom: 0.05em solid rgba(49, 49, 49, 0.6);
+}
+
+.visitePage {
+    background-color: rgb(4, 4, 148);
+    padding: 5px 20px;
+    color: white;
+    width: 97%;
+}
+
+.visitePageTextColor {
+    color: white;
 }
